// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "altNames": Array [
    "upserted",
    "oopserted",
  ],
  "language": "en",
  "name": "Upsert River",
  "region": Object {
    "language": "en",
    "name": "Ecuador",
  },
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "0": Object {
    "message": "\\"name\\" length must be at least 2 characters long",
    "path": "river.name",
  },
  "1": Object {
    "message": "\\"id\\" must be a valid GUID",
    "path": "river.region.id",
  },
  "2": Object {
    "message": "\\"0\\" length must be at least 2 characters long",
    "path": "river.altNames.0",
  },
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "altNames": Array [
    "upserted",
    "oopserted",
  ],
  "id": "a8416664-bfe3-11e7-abc4-cec278b6b50a",
  "language": "en",
  "name": "Upsert River",
  "region": Object {
    "id": "bd3e10b6-7624-11e7-b5a5-be2e44b06b34",
    "language": "en",
    "name": "Galicia",
  },
}
`;
